feat: add filesystem trait

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libc = "0.2.154"
+libc = "0.2.153"
+bitflags = "2.5.0"
 futures = "0.3.30"
 sharded-slab = "0.1.7"
 opendal = { version = "0.46.0", features = ["services-fs"] }
