--- a/.github/workflows/behavior_test.yml
+++ b/.github/workflows/behavior_test.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run OVFS and VM
         run: |
           chmod +x ./build_and_run_ovfs.sh
-          chmod +x ./build_and_run_vm.sh
+          chmod +x ./install_and_run_vm.sh
           nohup ./build_and_run_ovfs.sh &
           ./install_and_run_vm.sh
         working-directory: .github/scripts
