fix: env in ci is wrong

--- a/.github/workflows/behavior_test.yml
+++ b/.github/workflows/behavior_test.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run Behavior Test
         env:
           KIND: fs
-          ROOT: .github/scripts
+          ROOT: ${{ github.workspace }}/.github/scripts
         run: |
           cargo run --manifest-path ../../Cargo.toml  --release &
           chmod +x ./install_and_run_vm.sh
